undo commit of wrong troubleshooting directory
and other minor things